--- a/style.css
+++ b/style.css
@@ -1,36 +1,127 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  height: 100vh;
-  background: linear-gradient(to right, #e91e63, #3f51b5);
+  font-family: "Open Sans", sans-serif;
+  background-color: black;
 }
 
-.button {
+#container {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(bgImg.jpg);
+  margin: 0 auto;
+}
+
+#calculator {
+  width: 320px;
+  height: 520px;
+  background-color: #eaedef;
+  margin: 0 auto;
+  top: 20px;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#result {
+  height: 120px;
+}
+
+#history {
+  text-align: right;
+  height: 20px;
+  margin: 0 20px;
+  padding-top: 20px;
+  font-size: 15px;
+  color: #919191;
+}
+
+#output {
+  text-align: right;
+  height: 60px;
+  margin: 10px 20px;
+  font-size: 30px;
+}
+
+#keyboard {
+  height: 400px;
+}
+
+.operator,
+.number,
+.empty {
   width: 50px;
   height: 50px;
-  font-size: 25px;
-  margin: 1px;
+  margin: 15px;
+  float: left;
+  border-radius: 50%;
+  border-width: 0;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.number,
+.empty {
+  background-color: #eaedef;
+}
+
+.number,
+.operator {
   cursor: pointer;
-  background: #607d8b;
-  border: none;
-  color: white;
 }
 
-.textview {
-  width: 200px;
-  margin: 5px;
-  font-size: 25px;
-  padding: 5px;
-  border: none;
-  color: #607d8b;
+.keyboard,
+button:hover {
+  background: rgb(210, 235, 100);
 }
 
-.main {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+.operator:active,
+.number:active {
+  font-size: 13px;
+}
+.operator:focus,
+.number:focus,
+.empty:focus {
+  outline: 0;
+}
+
+button:nth-child(1) {
+  background: rgb(182, 178, 178);
+}
+
+button:nth-child(2) {
+  background: rgb(182, 178, 178);
+}
+
+button:nth-child(3) {
+  background: rgb(182, 178, 178);
+}
+
+button:nth-child(4) {
+  font-size: 20px;
+  background-color: #20b2aa;
+}
+
+button:nth-child(8) {
+  font-size: 20px;
+  background-color: #ffa500;
+}
+
+button:nth-child(12) {
+  font-size: 20px;
+  background-color: #f08080;
+}
+
+button:nth-child(16) {
+  font-size: 20px;
+  background-color: #7d93e0;
+}
+
+button:nth-child(20) {
+  font-size: 20px;
+  background-color: #9477af;
 }
